--- a/Fnb_Order/Fnb_Order.csproj
+++ b/Fnb_Order/Fnb_Order.csproj
@@ -289,6 +289,7 @@
     <Compile Include="Admin\UploadRateList.aspx.designer.cs">
       <DependentUpon>UploadRateList.aspx</DependentUpon>
     </Compile>
+    <Compile Include="Admin\VegetablesItems.cs" />
     <Compile Include="GlobalPath.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
