Ravi: Created Form of Add Customer.

--- a/Fnb_Order/Fnb_Order.csproj
+++ b/Fnb_Order/Fnb_Order.csproj
@@ -136,6 +136,7 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Admin\AddCustomer.aspx" />
     <Content Include="Admin\AddItem.aspx" />
     <Content Include="Admin\BillingSlip.aspx" />
     <Content Include="Admin\CreateOrder.aspx" />
@@ -198,6 +199,13 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Admin\AddCustomer.aspx.cs">
+      <DependentUpon>AddCustomer.aspx</DependentUpon>
+      <SubType>ASPXCodeBehind</SubType>
+    </Compile>
+    <Compile Include="Admin\AddCustomer.aspx.designer.cs">
+      <DependentUpon>AddCustomer.aspx</DependentUpon>
+    </Compile>
     <Compile Include="Admin\AddItem.aspx.cs">
       <DependentUpon>AddItem.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
