--- a/Fnb_Order/Fnb_Order.csproj
+++ b/Fnb_Order/Fnb_Order.csproj
@@ -156,6 +156,7 @@
     <Content Include="obj\Debug\DesignTimeResolveAssemblyReferencesInput.cache" />
     <Content Include="obj\Debug\Fnb_Order.csprojResolveAssemblyReference.cache" />
     <Content Include="Admin\Admin.Master" />
+    <Content Include=".github\workflows\main.yml" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\Fnb_Order_Management.pubxml" />
     <Content Include="UploadFile\FP_Template.xlsx" />
