--- a/Fnb_Order/.github/workflows/main.yml
+++ b/Fnb_Order/.github/workflows/main.yml
@@ -14,6 +14,6 @@ jobs:
     - name: FTP-deploy-Action
       uses: SamKirkland/FTP-Deploy-Action@4.0.0
       with:
-        ftp-server: 103.21.58.169
+        ftp-server: ftp://103.21.58.169
         ftp-username: sale
         ftp-password: ${{ secrets.ftp_password }}
