--- a/Fnb_Order/.github/workflows/main.yml
+++ b/Fnb_Order/.github/workflows/main.yml
@@ -17,3 +17,4 @@ jobs:
         ftp-server: ftp://103.21.58.169
         ftp-username: sale
         ftp-password: ${{ secrets.ftp_password }}
+        protocol: ftps
