Validation and WCF Rest Service

--- a/Fnb_Order/Web.config
+++ b/Fnb_Order/Web.config
@@ -9,7 +9,35 @@
    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
-  <appSettings>
+	<system.serviceModel>
+		<services>
+			<service name="Fnb_Order.Service1">
+				<endpoint address="" binding="webHttpBinding" bindingConfiguration="" behaviorConfiguration="RFEndPointBehavior"
+				  contract="Fnb_Order.IService1" />
+			</service>
+		</services>
+		<behaviors>
+			<endpointBehaviors>
+				<behavior name="RFEndPointBehavior"  >
+					<webHttp helpEnabled="true"/>
+				</behavior>
+			</endpointBehaviors>
+		</behaviors>
+		<protocolMapping>
+			<add binding="basicHttpsBinding" scheme="https" />
+		</protocolMapping>
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+	</system.serviceModel>
+	<system.webServer>
+		<modules runAllManagedModulesForAllRequests="true"/>
+		<!--
+        To browse web app root directory during debugging, set the value below to true.
+        Set to false before deployment to avoid disclosing web app folder information.
+      -->
+		<directoryBrowse enabled="true"/>
+	</system.webServer>
+
+	<appSettings>
     <!--<add key="ConnectionString" value="Data Source=LAPTOP-P2AATSJB;Initial Catalog=freshplanet;persist security info=True; Integrated Security=SSPI;" />-->
     <add key="ConnectionString" value="Data Source=103.21.58.192;Initial Catalog=freshplanet;User ID=freshplanet;Password=Fresh@1234" />
 
