--- a/Fnb_Order/packages.config
+++ b/Fnb_Order/packages.config
@@ -21,4 +21,5 @@
   <package id="CrystalReports.Web" version="13.0.4000" targetFramework="net45" />
   <package id="log4net" version="1.2.10" targetFramework="net45" />
   <package id="Microsoft.Office.Interop.Excel" version="15.0.4795.1000" targetFramework="net45" />
+  <package id="System.Runtime.Serialization.Primitives" version="4.3.0" targetFramework="net45" />
 </packages>
