--- a/Fnb_Order/Fnb_Order.csproj
+++ b/Fnb_Order/Fnb_Order.csproj
@@ -118,6 +118,9 @@
       <EmbedInteropTypes>True</EmbedInteropTypes>
     </Reference>
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -159,6 +162,7 @@
     <Content Include=".github\workflows\main.yml" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\Fnb_Order_Management.pubxml" />
+    <Content Include="Service1.svc" />
     <Content Include="UploadFile\FP_Template.xlsx" />
     <Content Include="Template\FP_Template.xlsx" />
     <None Include="Web.Debug.config">
@@ -308,6 +312,7 @@
     </Compile>
     <Compile Include="Admin\VegetablesItems.cs" />
     <Compile Include="GlobalPath.cs" />
+    <Compile Include="IService1.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -316,6 +321,9 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Service1.svc.cs">
+      <DependentUpon>Service1.svc</DependentUpon>
+    </Compile>
     <Compile Include="SessionHandler.cs" />
   </ItemGroup>
   <ItemGroup>
