ASMX Files and Deleted WCF svc files.

--- a/Fnb_Order/Web.config
+++ b/Fnb_Order/Web.config
@@ -5,12 +5,20 @@
   -->
 <configuration>
   <system.web>
+
+	  <webServices>
+		  <protocols>
+			  <add name="HttpGet"/>
+			  <add name="HttpPost"/>
+		  </protocols>
+	  </webServices>
+	  
     <customErrors mode="Off" />    
    <compilation debug="true" targetFramework="4.5" />
     <httpRuntime targetFramework="4.5" />
   </system.web>
 	<system.serviceModel>
-		<services>
+		<!--<services>
 			<service name="Fnb_Order.Service1">
 				<endpoint address="" binding="webHttpBinding" bindingConfiguration="" behaviorConfiguration="RFEndPointBehavior"
 				  contract="Fnb_Order.IService1" />
@@ -22,11 +30,19 @@
 					<webHttp helpEnabled="true"/>
 				</behavior>
 			</endpointBehaviors>
+
+			<serviceBehaviors>
+				<behavior name="RFEndPointBehavior">
+					<serviceMetadata  httpGetEnabled="true" />
+					<serviceDebug includeExceptionDetailInFaults="false" />
+				</behavior>
+			</serviceBehaviors>
+			
 		</behaviors>
 		<protocolMapping>
 			<add binding="basicHttpsBinding" scheme="https" />
 		</protocolMapping>
-		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+		<serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />-->
 	</system.serviceModel>
 	<system.webServer>
 		<modules runAllManagedModulesForAllRequests="true"/>
