--- a/Fnb_Order/Fnb_Order.csproj
+++ b/Fnb_Order/Fnb_Order.csproj
@@ -141,6 +141,7 @@
   <ItemGroup>
     <Content Include="Admin\AddCustomer.aspx" />
     <Content Include="Admin\AddItem.aspx" />
+    <Content Include="Admin\API\Authentication.asmx" />
     <Content Include="Admin\BillingSlip.aspx" />
     <Content Include="Admin\CreateOrder.aspx" />
     <Content Include="Admin\CReport\Print.aspx" />
@@ -162,7 +163,6 @@
     <Content Include=".github\workflows\main.yml" />
     <None Include="packages.config" />
     <None Include="Properties\PublishProfiles\Fnb_Order_Management.pubxml" />
-    <Content Include="Service1.svc" />
     <Content Include="UploadFile\FP_Template.xlsx" />
     <Content Include="Template\FP_Template.xlsx" />
     <None Include="Web.Debug.config">
@@ -224,6 +224,10 @@
     </Compile>
     <Compile Include="Admin\Admin.Master.designer.cs">
       <DependentUpon>Admin.Master</DependentUpon>
+    </Compile>
+    <Compile Include="Admin\API\Authentication.asmx.cs">
+      <DependentUpon>Authentication.asmx</DependentUpon>
+      <SubType>Component</SubType>
     </Compile>
     <Compile Include="Admin\CreateOrder.aspx.cs">
       <DependentUpon>CreateOrder.aspx</DependentUpon>
@@ -312,7 +316,6 @@
     </Compile>
     <Compile Include="Admin\VegetablesItems.cs" />
     <Compile Include="GlobalPath.cs" />
-    <Compile Include="IService1.cs" />
     <Compile Include="Login.aspx.cs">
       <DependentUpon>Login.aspx</DependentUpon>
       <SubType>ASPXCodeBehind</SubType>
@@ -321,9 +324,6 @@
       <DependentUpon>Login.aspx</DependentUpon>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Service1.svc.cs">
-      <DependentUpon>Service1.svc</DependentUpon>
-    </Compile>
     <Compile Include="SessionHandler.cs" />
   </ItemGroup>
   <ItemGroup>
